Bug 138972 - Database copy over loses database info in version 7.0.3.1
Summary: Database copy over loses database info in version 7.0.3.1
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.1 target:7.0.5
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2020-12-16 15:42 UTC by C Sara
Modified: 2021-01-19 17:29 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Reply to email asking for sample of bug in Libre Office Calc (475.16 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-12-17 23:55 UTC, C Sara
Details
copy of the spreadsheet that has the Database names (476.79 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-12-18 20:12 UTC, C Sara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description C Sara 2020-12-16 15:42:03 UTC
Description:
Updating to Version 7.0 made my database info in navigator disappear when dragged and dropped as a copy in my spreadsheet.

Actual Results:
Open navigator in calc and choose insert as copy. drag and drop a database name into the calc and the name disappears from the database list

Expected Results:
I had to shut the navigator down and then pull it back up to get whole list


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
It should have copied the database name without making it disappear. The name after copying in the calc should still be in the database list.
Comment 1 m_a_riosv 2020-12-17 23:13:43 UTC
Please attach a sample file and detail the steps to reproduce the issue.
Comment 2 C Sara 2020-12-17 23:55:02 UTC
Created attachment 168273 [details]
Reply to email asking for sample of bug in Libre Office Calc

I wrote what happens in the document.
This document is used for legal stuff and I would appreciate the information in it remaining private.
Thanks for helping with this problem.
~Sara Campbell
Comment 3 m_a_riosv 2020-12-18 00:31:14 UTC
I can't reproduce it with
Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 20180; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); Interfaz: es-ES Calc: CL
Comment 4 C Sara 2020-12-18 13:34:03 UTC
I downloaded the 7.0.4 version and it’s still having Database items disappear once dragged and dropped.(In reply to m.a.riosv from comment #3)
> I can't reproduce it with
> Version: 7.0.4.2 (x64)
> Build ID: dcf040e67528d9187c66b2379df5ea4407429775
> CPU threads: 4; OS: Windows 10.0 Build 20180; UI render: Skia/Vulkan; VCL:
> win
> Locale: es-ES (es_ES); Interfaz: es-ES Calc: CL

I downloaded the 7.0.4 version and it’s still having Database items disappear once dragged and dropped.
Comment 5 m_a_riosv 2020-12-18 19:42:25 UTC
So maybe more detailed steps, where drag and drop is done, on the sheet on the navigator?.
Comment 6 C Sara 2020-12-18 20:12:16 UTC
Created attachment 168304 [details]
copy of the spreadsheet that has the Database names

IN Navigator, make sure on the upper right corner you drop down and choose INSERT AS COPY, then choose a name from under the Database section, drag over to a cell under the Clnt # , and it should fill 3 cells with info BUT in the Navigator window, the Database name that you dragged and dropped will disappear, making you close then open the Navigator window all over again to get the names under the Database section.
Comment 7 m_a_riosv 2020-12-18 21:59:48 UTC
I can see now.
Reproducible
Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 20180; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); Interfaz: es-ES Calc: CL
Version: 7.2.0.0.alpha0+ (x64)
Build ID: e97a81e94511b52987a50b7bdb72c922899da588
CPU threads: 4; OS: Windows 10.0 Build 20180; UI render: Skia/Raster; VCL: win
Locale: en-GB (es_ES); UI: en-US Calc: CL

regression from
Version: 6.4.7.2 (x64)
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 4; OS: Windows 10.0 Build 20180; UI render: default; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US Calc: CL
Comment 8 Martin Srdoš 2020-12-22 21:22:11 UTC
Log from bibisecting:
 9a0f22342140a7e0dbe35e2aa40dcc9c73f2842f is the first bad commit
commit 9a0f22342140a7e0dbe35e2aa40dcc9c73f2842f
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Mar 17 18:55:58 2020 -0700

    source f0cd0c7618f4463ad556ee0207ade62b6b2df962

    source f0cd0c7618f4463ad556ee0207ade62b6b2df962
    source 5e76c9c02a9991a4a89f43975607f58b36b4d663


I am sending email to Caolán McNamara, who fixed tdf#131157.
Comment 9 Caolán McNamara 2021-01-13 10:13:32 UTC
As a workaround, hold down ctrl while you drag and drop
Comment 10 Commit Notification 2021-01-13 14:37:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1095b7bdf1bb33b3dc0fb5ae73342ae6ca0396fc

Resolves: tdf#138972 dnd is moving instead of copying the data

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Martin Srdoš 2021-01-17 15:32:00 UTC
I can confirm that it works good now. Thank you.
Comment 12 Martin Srdoš 2021-01-17 15:33:04 UTC
And(In reply to Martin Srdoš from comment #11)
> I can confirm that it works good now. Thank you.

And I test it on:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 9f9798f07f0b56ae474f31ded671cc8da598d244
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: cs-CZ (cs_CZ); UI: en-US
Calc: threaded
Comment 13 Commit Notification 2021-01-19 17:28:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/e5773d383ac4ab43c03b88dfe8deb4f16515feba

Resolves: tdf#138972 dnd is moving instead of copying the data

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2021-01-19 17:29:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/5dc6a8a0076eb966ba3a1f45182b0abfe1c98e23

Resolves: tdf#138972 dnd is moving instead of copying the data

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.