Resolves: tdf#138972 dnd is moving instead of copying the data

Change-Id: Icb2a3882704bf38c14b7a46154d51c3171268ca6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109220
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 1095b7bdf1bb33b3dc0fb5ae73342ae6ca0396fc)